<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiempo Libre</string>
    <string name="action_settings">Settings</string>
    <string name="detalle">detalle</string>
    <string name="titulo">titulo</string>
    <string name="descripcion_img">Descripción de la imagen</string>
    <string name="actactualiza">actualizar</string>
    <string name="agregar">Agregar</string>
    <string name="origen">About</string>
    <string name="app_id">667757693254986</string>
    <string name="bienvenido">Compartir</string>
      <string name="Logout">Logout</string>
    <string name="share">Desarrolladores</string>
    <string name="web">Web</string>
    <string name="mapa">Mapa</string>
     <string name="compartir">Compartir</string>
    <string name="compartirfacebook">Compartir en Facebook</string>
     <string name="direccion">Direccion</string>
     <string name="desarolladores">Desarrolladores:\n</string>
     <string name="nombres">- Andrés Gracés Alarcón\n- Carlos Campos Cartes\n- Héctor poblete Concha\n- Luis Maliqueo Araneda</string>
     <string name="manager">\nProfesor:\n</string>
    <string name="profesor">- Víctor Ruiz Cáceres</string>

</resources>
