<?xml version="1.0" encoding="utf-8"  ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/desweb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/web" />

        <Button
            android:id="@+id/desmapa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/mapa" />

        <Button
            android:id="@+id/descompartir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:text="@string/compartir"/>

    
    </LinearLayout>

 <ScrollView
     android:id="@+id/scrollView1"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:layout_alignBottom="@+id/desimagen"
     android:layout_alignParentRight="true" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/destitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desimagen"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:maxLines="4"
            android:text="@string/titulo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/desdireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/destitulo"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/direccion"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/desdetalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/desdireccion"
            android:layout_marginLeft="25dp"
            android:text="@string/detalle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/desimagen"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/descripcion_img"
            android:gravity="center"
            android:scaleType="fitXY"
            android:src="@android:drawable/ic_menu_gallery" />

    </RelativeLayout>
 </ScrollView>
</LinearLayout>
