<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="1">

    <ImageView
        android:id="@+id/imageView_imagen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/descripcion_img"
        android:src="@android:drawable/ic_menu_gallery" 
     	android:layout_marginEnd="5dp" 
      	android:layout_marginStart="5dp"
     	android:layout_marginTop="5dp" 
     	android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" 
        android:layout_weight="1">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/titulo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/detalle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:text="@string/detalle"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
         <TextView
            android:id="@+id/p_ide"
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:visibility="invisible"
            android:text="@string/detalle"/>
		

    </LinearLayout>

</LinearLayout>
